volexc/tests/ui/check_undefined_type_message.out
Error: undefined type `UndefinedType`
   ╭─[check_undefined_type_message.vol:3:10]
   │
 3 │     bar: UndefinedType = 1
   │          ──────┬──────  
   │                ╰──────── not found
───╯