volexc/tests/ui/check_undefined_type_message.vol
// Undefined type reference in message
message Foo {
    bar: UndefinedType = 1
}
